--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "ES2022",
     "esModuleInterop": true,
     "target": "ES2022",
+    "lib": ["ES2022", "DOM"],
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
@@ -16,5 +17,11 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-  }
+    "resolveJsonModule": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "types": ["node"]
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
