--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "polka",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
+	"type": "module",
 	"scripts": {
 		"build": "npx tsup --publicDir",
 		"format": "biome format ./",
@@ -18,11 +17,21 @@
 	"packageManager": "pnpm@10.14.0",
 	"devDependencies": {
 		"@biomejs/biome": "2.2.5",
+		"events": "^3.3.0",
 		"tsup": "^8.5.0",
-		"typescript": "^5.9.3"
+		"typescript": "latest"
 	},
 	"dependencies": {
+		"@chainsafe/libp2p-noise": "^17.0.0",
+		"@chainsafe/libp2p-yamux": "^8.0.0",
+		"@libp2p/dcutr": "^3.0.4",
+		"@libp2p/identify": "^4.0.4",
+		"@libp2p/interface": "^3.0.2",
+		"@libp2p/webrtc": "^6.0.5",
+		"@libp2p/webtransport": "^6.0.6",
+		"@multiformats/multiaddr": "^13.0.1",
 		"@types/pouchdb-browser": "^6.1.5",
+		"it-pipe": "^3.0.1",
 		"libp2p": "^3.0.5",
 		"pouchdb-browser": "^9.0.0"
 	}
