--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.5",
 		"tsup": "^8.5.0",
-		"typescript": "latest"
+		"typescript": "latest",
+		"webextension-polyfill": "^0.12.0"
 	},
 	"dependencies": {
 		"@noble/curves": "jsr:^2.0.1",
+		"@types/pouchdb": "^6.4.2",
 		"helia": "^6.0.8",
+		"pouchdb": "^9.0.0",
 		"zod": "^4.1.12"
 	}
 }
