--- a/webui/package.json
+++ b/webui/package.json
@@ -1,10 +1,13 @@
 {
-	"name": "example-with-tailwindcss",
+	"name": "vite-template-solid",
+	"version": "0.0.0",
+	"description": "",
 	"type": "module",
 	"scripts": {
-		"dev": "vinxi dev",
-		"build": "vinxi build",
-		"start": "vinxi start",
+		"start": "vite",
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview",
 		"format": "biome format ./",
 		"format:fix": "biome format --write ./",
 		"lint": "biome lint ./",
@@ -12,23 +15,19 @@
 		"check": "biome check ./",
 		"check:fix": "biome check --write ./"
 	},
-	"dependencies": {
-		"@libp2p/http-fetch": "^4.0.1",
-		"@libp2p/interface": "^3.1.0",
-		"@multiformats/multiaddr": "^13.0.1",
-		"@noble/curves": "^2.0.1",
-		"@solidjs/router": "^0.15.0",
-		"@solidjs/start": "^1.1.0",
-		"helia": "^6.0.9",
-		"solid-js": "^1.9.5",
-		"vinxi": "^0.5.7"
-	},
+	"license": "MIT",
 	"devDependencies": {
 		"@biomejs/biome": "2.3.5",
-		"@tailwindcss/vite": "^4.0.7",
-		"tailwindcss": "^4.0.7"
+		"@tailwindcss/vite": "^4.1.13",
+		"solid-devtools": "^0.34.3",
+		"tailwindcss": "^4.1.13",
+		"typescript": "^5.9.2",
+		"vite": "^7.1.4",
+		"vite-plugin-solid": "^2.11.8"
 	},
-	"engines": {
-		"node": ">=22"
+	"dependencies": {
+		"@libp2p/webrtc-star": "^7.0.0",
+		"helia": "^6.0.9",
+		"solid-js": "^1.9.9"
 	}
 }
