--- a/webui/package.json
+++ b/webui/package.json
@@ -26,8 +26,17 @@
 		"vite-plugin-solid": "^2.11.8"
 	},
 	"dependencies": {
+		"@chainsafe/libp2p-noise": "^17.0.0",
+		"@chainsafe/libp2p-quic": "^1.1.3",
+		"@chainsafe/libp2p-yamux": "^8.0.1",
+		"@libp2p/circuit-relay-v2": "^4.1.2",
+		"@libp2p/http": "^2.0.1",
+		"@libp2p/webrtc": "^6.0.10",
+		"@libp2p/webrtc-direct": "^6.0.0",
 		"@libp2p/webrtc-star": "^7.0.0",
-		"helia": "^6.0.9",
+		"@libp2p/websockets": "^10.1.2",
+		"@libp2p/webtransport": "^6.0.11",
+		"libp2p": "^3.1.2",
 		"solid-js": "^1.9.9"
 	}
 }
