--- a/pds/package.json
+++ b/pds/package.json
@@ -9,7 +9,8 @@
 		"lint": "biome lint ./",
 		"lint:fix": "biome lint --write ./",
 		"check": "biome check ./",
-		"check:fix": "biome check --write ./"
+		"check:fix": "biome check --write ./",
+		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.6",
@@ -19,12 +20,14 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"@bytecodealliance/jco": "^1.15.3",
 		"@chainsafe/libp2p-noise": "^17.0.0",
 		"@chainsafe/libp2p-yamux": "^8.0.1",
 		"@libp2p/http": "^2.0.1",
 		"@libp2p/http-server": "^2.0.1",
 		"@libp2p/webrtc": "^6.0.10",
 		"hono": "^4.10.6",
-		"libp2p": "^3.1.2"
+		"libp2p": "^3.1.2",
+		"zod": "^4.1.12"
 	}
 }
