クライアント実装

--- a/pds/package.json
+++ b/pds/package.json
@@ -21,11 +21,14 @@
 	},
 	"dependencies": {
 		"@bytecodealliance/jco": "^1.15.3",
+		"@bytecodealliance/preview2-shim": "^0.17.5",
 		"@chainsafe/libp2p-noise": "^17.0.0",
 		"@chainsafe/libp2p-yamux": "^8.0.1",
+		"@ipshipyard/libp2p-auto-tls": "^2.0.1",
 		"@libp2p/http": "^2.0.1",
 		"@libp2p/http-server": "^2.0.1",
 		"@libp2p/webrtc": "^6.0.10",
+		"@libp2p/websockets": "^10.1.2",
 		"hono": "^4.10.6",
 		"libp2p": "^3.1.2",
 		"zod": "^4.1.12"
