--- a/pds/package.json
+++ b/pds/package.json
@@ -10,7 +10,7 @@
 		"lint:fix": "biome lint --write ./",
 		"check": "biome check ./",
 		"check:fix": "biome check --write ./",
-		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled"
+		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --map polka:repository/blockstore=../../lib/blockstore.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.6",
