--- a/repo/Cargo.toml
+++ b/repo/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tokio = { version = "1.48.0", features = ["full"] }
+atrium-api = "0.25.6"
+atrium-repo = "0.1.6"
+serde_json = "1.0.145"
