--- a/repo/Cargo.toml
+++ b/repo/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1.48.0", features = ["full"] }
 atrium-api = "0.25.6"
 atrium-repo = "0.1.6"
 serde_json = "1.0.145"
+once_cell = "1.20.2"
