--- a/repo/Cargo.toml
+++ b/repo/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+wit-bindgen = { version = "0.48.1" }
 tokio = { version = "1.48.0", features = ["full"] }
 atrium-api = "0.25.6"
 atrium-repo = "0.1.6"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.145"
+serde_ipld_dagcbor = "0.6"
 once_cell = "1.20.2"
 cid = "0.11.1"
 hex = "0.4"
