--- a/repo/Cargo.toml
+++ b/repo/Cargo.toml
@@ -3,9 +3,13 @@ name = "repo"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 wit-bindgen = { version = "0.48.1" }
-tokio = { version = "1.48.0", features = ["full"] }
+tokio = { version = "1.48.0", features = ["sync", "macros"] }
+futures = "0.3"
 atrium-api = "0.25.6"
 atrium-repo = "0.1.6"
 serde = { version = "1.0", features = ["derive"] }
