stream通信できるように

--- a/pds/package.json
+++ b/pds/package.json
@@ -26,8 +26,13 @@
 		"@chainsafe/libp2p-yamux": "^8.0.1",
 		"@ipld/car": "^5.4.2",
 		"@ipshipyard/libp2p-auto-tls": "^2.0.1",
+		"@libp2p/auto-tls": "^1.0.6",
+		"@libp2p/autonat": "^3.0.9",
+		"@libp2p/circuit-relay-v2": "^4.1.2",
 		"@libp2p/http": "^2.0.1",
 		"@libp2p/http-server": "^2.0.1",
+		"@libp2p/identify": "^4.0.9",
+		"@libp2p/keychain": "^6.0.9",
 		"@libp2p/webrtc": "^6.0.10",
 		"@libp2p/websockets": "^10.1.2",
 		"hono": "^4.10.6",
