--- a/pds/package.json
+++ b/pds/package.json
@@ -38,6 +38,8 @@
 		"hono": "^4.10.6",
 		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
+		"pino": "^10.1.0",
+		"pino-pretty": "^13.1.2",
 		"zod": "^4.1.12"
 	}
 }
