--- a/webui/package.json
+++ b/webui/package.json
@@ -13,7 +13,8 @@
 		"lint": "biome lint ./",
 		"lint:fix": "biome lint --write ./",
 		"check": "biome check ./",
-		"check:fix": "biome check --write ./"
+		"check:fix": "biome check --write ./",
+		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --map polka:repository/blockstore=../../lib/blockstore.ts polka:repository/crypto=../../lib/crypto.ts"
 	},
 	"license": "MIT",
 	"devDependencies": {
@@ -27,6 +28,7 @@
 	},
 	"dependencies": {
 		"@atproto/crypto": "^0.4.4",
+		"@bytecodealliance/jco": "^1.15.3",
 		"@chainsafe/libp2p-noise": "^17.0.0",
 		"@chainsafe/libp2p-quic": "^1.1.3",
 		"@chainsafe/libp2p-yamux": "^8.0.1",
@@ -38,6 +40,8 @@
 		"@libp2p/webrtc-star": "^7.0.0",
 		"@libp2p/websockets": "^10.1.2",
 		"@libp2p/webtransport": "^6.0.11",
+		"@noble/curves": "^2.0.1",
+		"@noble/hashes": "^2.0.1",
 		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
 		"solid-js": "^1.9.9"
