--- a/pds/package.json
+++ b/pds/package.json
@@ -4,13 +4,14 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
+		"build": "npx tsup --publicDir",
 		"format": "biome format ./",
 		"format:fix": "biome format --write ./",
 		"lint": "biome lint ./",
 		"lint:fix": "biome lint --write ./",
 		"check": "biome check ./",
 		"check:fix": "biome check --write ./",
-		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --map polka:repository/blockstore=../../lib/blockstore.ts polka:repository/crypto=../../lib/crypto.ts"
+		"transpile": "bunx jco transpile wasm/repo.wasm -o public --map polka:repository/blockstore=../src/lib/blockstore.js polka:repository/crypto=../src/lib/crypto.js"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.6",
@@ -39,11 +40,14 @@
 		"@noble/curves": "^2.0.1",
 		"@noble/secp256k1": "^3.0.0",
 		"blockstore-fs": "^3.0.2",
+		"electron": "^39.2.4",
+		"electron-store": "^11.0.2",
 		"hono": "^4.10.6",
 		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
 		"pino": "^10.1.0",
 		"pino-pretty": "^13.1.2",
+		"tsup": "^8.5.1",
 		"zod": "^4.1.12"
 	}
 }
