--- a/webui/package.json
+++ b/webui/package.json
@@ -44,6 +44,7 @@
 		"@noble/hashes": "^2.0.1",
 		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
+		"solid-icons": "^1.1.0",
 		"solid-js": "^1.9.9"
 	}
 }
