--- a/pds/package.json
+++ b/pds/package.json
@@ -21,6 +21,7 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"@atcute/tid": "^1.0.3",
 		"@atproto/crypto": "^0.4.4",
 		"@bytecodealliance/jco": "^1.15.3",
 		"@bytecodealliance/preview2-shim": "^0.17.5",
@@ -31,15 +32,19 @@
 		"@libp2p/auto-tls": "^1.0.6",
 		"@libp2p/autonat": "^3.0.9",
 		"@libp2p/circuit-relay-v2": "^4.1.2",
+		"@libp2p/dcutr": "^3.0.9",
 		"@libp2p/http": "^2.0.1",
 		"@libp2p/http-server": "^2.0.1",
 		"@libp2p/identify": "^4.0.9",
 		"@libp2p/keychain": "^6.0.9",
+		"@libp2p/mplex": "^12.0.10",
+		"@libp2p/tcp": "^11.0.9",
 		"@libp2p/webrtc": "^6.0.10",
 		"@libp2p/websockets": "^10.1.2",
 		"@multiformats/multiaddr": "^13.0.1",
 		"@noble/curves": "^2.0.1",
 		"@noble/secp256k1": "^3.0.0",
+		"@types/ws": "^8.18.1",
 		"blockstore-fs": "^3.0.2",
 		"electron": "^39.2.4",
 		"electron-store": "^11.0.2",
@@ -49,6 +54,7 @@
 		"pino": "^10.1.0",
 		"pino-pretty": "^13.1.2",
 		"tsup": "^8.5.1",
+		"ws": "^8.18.3",
 		"zod": "^4.1.12"
 	}
 }
