--- a/relay/package.json
+++ b/relay/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"dev": "bun index.ts",
+		"dev": "node index.ts",
 		"format": "biome format ./",
 		"format:fix": "biome format --write ./",
 		"lint": "biome lint ./",
@@ -20,9 +20,13 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"@chainsafe/libp2p-noise": "^17.0.0",
+		"@chainsafe/libp2p-yamux": "^8.0.1",
 		"@libp2p/autonat": "^3.0.9",
 		"@libp2p/circuit-relay-v2": "^4.1.2",
 		"@libp2p/identify": "^4.0.9",
+		"@libp2p/mplex": "^12.0.10",
+		"@libp2p/tcp": "^11.0.9",
 		"@libp2p/webrtc-star-signalling-server": "^4.0.0",
 		"@libp2p/websockets": "^10.1.2",
 		"@multiformats/multiaddr": "^13.0.1",
