--- a/webui/package.json
+++ b/webui/package.json
@@ -33,6 +33,7 @@
 		"@chainsafe/libp2p-quic": "^1.1.3",
 		"@chainsafe/libp2p-yamux": "^8.0.1",
 		"@libp2p/circuit-relay-v2": "^4.1.2",
+		"@libp2p/dcutr": "^3.0.9",
 		"@libp2p/http": "^2.0.1",
 		"@libp2p/identify": "^4.0.9",
 		"@libp2p/webrtc": "^6.0.10",
