--- a/webui/package.json
+++ b/webui/package.json
@@ -32,6 +32,7 @@
 		"@chainsafe/libp2p-noise": "^17.0.0",
 		"@chainsafe/libp2p-quic": "^1.1.3",
 		"@chainsafe/libp2p-yamux": "^8.0.1",
+		"@ipld/dag-cbor": "^9.2.5",
 		"@libp2p/circuit-relay-v2": "^4.1.2",
 		"@libp2p/dcutr": "^3.0.9",
 		"@libp2p/http": "^2.0.1",
@@ -43,9 +44,11 @@
 		"@libp2p/webtransport": "^6.0.11",
 		"@noble/curves": "^2.0.1",
 		"@noble/hashes": "^2.0.1",
+		"@types/varint": "^6.0.3",
 		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
 		"solid-icons": "^1.1.0",
-		"solid-js": "^1.9.9"
+		"solid-js": "^1.9.9",
+		"varint": "^6.0.0"
 	}
 }
