--- a/webui/package.json
+++ b/webui/package.json
@@ -49,6 +49,7 @@
 		"multiformats": "^13.4.1",
 		"solid-icons": "^1.1.0",
 		"solid-js": "^1.9.9",
-		"varint": "^6.0.0"
+		"varint": "^6.0.0",
+		"web-did-resolver": "^2.0.31"
 	}
 }
