--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,7 @@
 		"hono": "^4.10.6",
 		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
+		"nodegit": "^0.27.0",
 		"pino": "^10.1.0",
 		"pino-pretty": "^13.1.2",
 		"tsup": "^8.5.1",
