--- a/postui/package.json
+++ b/postui/package.json
@@ -25,6 +25,7 @@
 		"@ipld/dag-cbor": "^9.2.5",
 		"@noble/curves": "^2.0.1",
 		"@noble/hashes": "^2.0.1",
+		"@tailwindcss/vite": "^4.1.17",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-fs": "~2",
 		"@tauri-apps/plugin-opener": "^2",
@@ -32,6 +33,7 @@
 		"@types/varint": "^6.0.3",
 		"multiformats": "^13.4.1",
 		"solid-js": "^1.9.3",
+		"tailwindcss": "^4.1.17",
 		"varint": "^6.0.0"
 	},
 	"devDependencies": {
