--- a/postui/package.json
+++ b/postui/package.json
@@ -32,9 +32,11 @@
 		"@tauri-apps/plugin-stronghold": "~2",
 		"@types/varint": "^6.0.3",
 		"multiformats": "^13.4.1",
+		"solid-icons": "^1.1.0",
 		"solid-js": "^1.9.3",
 		"tailwindcss": "^4.1.17",
-		"varint": "^6.0.0"
+		"varint": "^6.0.0",
+		"web-did-resolver": "^2.0.31"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
