--- a/postui/src-tauri/Cargo.toml
+++ b/postui/src-tauri/Cargo.toml
@@ -23,5 +23,7 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-fs = "2"
-tauri-plugin-stronghold = "2"
+wasmtime = "39.0.1"
+atrium-crypto = "0.1.2"
+hex = "0.4.3"
 
