--- a/postui/src-tauri/Cargo.toml
+++ b/postui/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
@@ -26,4 +27,5 @@ tauri-plugin-fs = "2"
 wasmtime = "39.0.1"
 atrium-crypto = "0.1.2"
 hex = "0.4.3"
-
+atrium-repo = "0.1.6"
+cid = "0.11.1"
