--- a/cli/package.json
+++ b/cli/package.json
@@ -1,12 +1,37 @@
 {
-  "name": "cli",
-  "module": "index.ts",
-  "type": "module",
-  "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  }
+	"name": "cli",
+	"module": "index.ts",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"format": "biome format ./",
+		"format:fix": "biome format --write ./",
+		"lint": "biome lint ./",
+		"lint:fix": "biome lint --write ./",
+		"check": "biome check ./",
+		"check:fix": "biome check --write ./",
+		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.8",
+		"@types/bun": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5"
+	},
+	"dependencies": {
+		"@atcute/tid": "^1.0.3",
+		"@atproto/crypto": "^0.4.5",
+		"@bytecodealliance/jco": "^1.15.4",
+		"@bytecodealliance/preview2-shim": "^0.17.5",
+		"@ipld/dag-cbor": "^9.2.5",
+		"@noble/curves": "^2.0.1",
+		"@noble/hashes": "^2.0.1",
+		"@types/varint": "^6.0.3",
+		"enquirer": "^2.4.1",
+		"inquirer": "^13.0.2",
+		"multiformats": "^13.4.1",
+		"varint": "^6.0.0",
+		"web-did-resolver": "^2.0.32"
+	}
 }
