--- a/store/package.json
+++ b/store/package.json
@@ -19,12 +19,16 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"@hono/node-server": "^1.19.6",
+		"@hono/node-ws": "^1.2.0",
+		"@hono/zod-validator": "^0.7.5",
 		"@prisma/adapter-better-sqlite3": "6.19.0",
 		"@prisma/client": "6.19.0",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^24.10.1",
 		"@types/ws": "^8.18.1",
 		"dotenv": "^17.2.3",
+		"hono": "^4.10.7",
 		"prisma": "6.19.0",
 		"ws": "^8.18.3",
 		"zod": "^4.1.13"
