--- a/cli/package.json
+++ b/cli/package.json
@@ -10,7 +10,8 @@
 		"lint:fix": "biome lint --write ./",
 		"check": "biome check ./",
 		"check:fix": "biome check --write ./",
-		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async"
+		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async",
+		"start": "node index.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
