--- a/webui/package.json
+++ b/webui/package.json
@@ -27,6 +27,7 @@
 		"vite-plugin-solid": "^2.11.8"
 	},
 	"dependencies": {
+		"@atcute/tid": "^1.0.3",
 		"@atproto/crypto": "^0.4.4",
 		"@bytecodealliance/jco": "^1.15.3",
 		"@bytecodealliance/preview2-shim": "^0.17.5",
