--- a/cli/package.json
+++ b/cli/package.json
@@ -33,6 +33,7 @@
 		"did-resolver": "^4.1.0",
 		"dotenv": "^17.2.3",
 		"enquirer": "^2.4.1",
+		"hono": "^4.10.7",
 		"inquirer": "^13.0.2",
 		"multiformats": "^13.4.1",
 		"nodegit": "^0.27.0",
