--- a/desktop/package.json
+++ b/desktop/package.json
@@ -18,16 +18,21 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:linux": "electron-vite build && electron-builder --linux",
+    "transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async"
   },
   "dependencies": {
     "@atproto/crypto": "^0.4.5",
+    "@bytecodealliance/jco": "^1.15.4",
+    "@bytecodealliance/preview2-shim": "^0.17.5",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@ipld/dag-cbor": "^9.2.5",
+    "@noble/curves": "^2.0.1",
     "@noble/hashes": "^2.0.1",
     "@tailwindcss/vite": "^4.1.17",
     "@types/varint": "^6.0.3",
+    "keytar": "^7.9.0",
     "multiformats": "^13.4.1",
     "tailwindcss": "^4.1.17",
     "varint": "^6.0.0",
