--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,57 +1,44 @@
 {
-  "name": "desktop",
-  "version": "1.0.0",
-  "description": "An Electron application with Solid and TypeScript",
-  "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://electron-vite.org",
-  "scripts": {
-    "format": "prettier --write .",
-    "lint": "eslint --cache .",
-    "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
-    "typecheck:web": "tsc --noEmit -p tsconfig.web.json --composite false",
-    "typecheck": "npm run typecheck:node && npm run typecheck:web",
-    "start": "electron-vite preview",
-    "dev": "electron-vite dev",
-    "build": "npm run typecheck && electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux",
-    "transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async"
-  },
-  "dependencies": {
-    "@atproto/crypto": "^0.4.5",
-    "@bytecodealliance/jco": "^1.15.4",
-    "@bytecodealliance/preview2-shim": "^0.17.5",
-    "@electron-toolkit/preload": "^3.0.2",
-    "@electron-toolkit/utils": "^4.0.0",
-    "@ipld/dag-cbor": "^9.2.5",
-    "@noble/curves": "^2.0.1",
-    "@noble/hashes": "^2.0.1",
-    "@tailwindcss/vite": "^4.1.17",
-    "@types/varint": "^6.0.3",
-    "keytar": "^7.9.0",
-    "multiformats": "^13.4.1",
-    "tailwindcss": "^4.1.17",
-    "varint": "^6.0.0",
-    "web-did-resolver": "^2.0.32"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.8",
-    "@electron-toolkit/eslint-config-prettier": "^3.0.0",
-    "@electron-toolkit/eslint-config-ts": "^3.1.0",
-    "@electron-toolkit/tsconfig": "^2.0.0",
-    "@types/node": "^22.19.1",
-    "electron-builder": "^26.0.12",
-    "electron-vite": "^5.0.0",
-    "eslint": "^9.39.1",
-    "eslint-plugin-solid": "^0.14.5",
-    "prettier": "^3.7.4",
-    "solid-js": "^1.9.10",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.6",
-    "vite-plugin-solid": "^2.11.10"
-  }
+	"name": "desktop",
+	"module": "index.ts",
+	"type": "module",
+	"private": true,
+	"devDependencies": {
+		"@biomejs/biome": "2.3.8",
+		"@types/bun": "latest"
+	},
+	"peerDependencies": {
+		"typescript": "^5"
+	},
+	"scripts": {
+		"format": "biome format ./",
+		"format:fix": "biome format --write ./",
+		"lint": "biome lint ./",
+		"lint:fix": "biome lint --write ./",
+		"check": "biome check ./",
+		"check:fix": "biome check --write ./",
+		"transpile": "bunx jco transpile wasm/repo.wasm -o public --instantiation=async",
+		"build:ui": "cd ui && bun run build",
+		"build": "bun run build:ui && bunx tsup"
+	},
+	"dependencies": {
+		"@atcute/tid": "^1.0.3",
+		"@atproto/crypto": "^0.4.5",
+		"@bytecodealliance/jco": "^1.15.4",
+		"@bytecodealliance/preview2-shim": "^0.17.5",
+		"@electron-toolkit/preload": "^3.0.2",
+		"@electron-toolkit/utils": "^4.0.0",
+		"@ipld/dag-cbor": "^9.2.5",
+		"@noble/curves": "^2.0.1",
+		"@noble/hashes": "^2.0.1",
+		"@types/varint": "^6.0.3",
+		"electron": "^39.2.6",
+		"keytar": "^7.9.0",
+		"multiformats": "^13.4.1",
+		"solid-icons": "^1.1.0",
+		"tsup": "^8.5.1",
+		"varint": "^6.0.0",
+		"web-did-resolver": "^2.0.32",
+		"zod": "^4.1.13"
+	}
 }
