--- a/cli/package.json
+++ b/cli/package.json
@@ -11,7 +11,8 @@
 		"check": "biome check ./",
 		"check:fix": "biome check --write ./",
 		"transpile": "bunx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async",
-		"start": "node index.ts"
+		"start": "node index.ts",
+		"daemon": "node daemon.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
