--- a/webview/package.json
+++ b/webview/package.json
@@ -48,8 +48,11 @@
 		"@noble/hashes": "^2.0.1",
 		"@solidjs/router": "^0.15.4",
 		"@types/varint": "^6.0.3",
+		"graphology": "^0.26.0",
+		"graphology-layout-forceatlas2": "^0.10.1",
 		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
+		"sigma": "^3.0.2",
 		"solid-icons": "^1.1.0",
 		"solid-js": "^1.9.9",
 		"varint": "^6.0.0",
