--- a/webview/package.json
+++ b/webview/package.json
@@ -31,26 +31,18 @@
 		"@atproto/crypto": "^0.4.4",
 		"@bytecodealliance/jco": "^1.15.3",
 		"@bytecodealliance/preview2-shim": "^0.17.5",
-		"@chainsafe/libp2p-noise": "^17.0.0",
-		"@chainsafe/libp2p-quic": "^1.1.3",
-		"@chainsafe/libp2p-yamux": "^8.0.1",
 		"@ipld/dag-cbor": "^9.2.5",
-		"@libp2p/circuit-relay-v2": "^4.1.2",
-		"@libp2p/dcutr": "^3.0.9",
-		"@libp2p/http": "^2.0.1",
-		"@libp2p/identify": "^4.0.9",
-		"@libp2p/webrtc": "^6.0.10",
-		"@libp2p/webrtc-direct": "^6.0.0",
-		"@libp2p/webrtc-star": "^7.0.0",
-		"@libp2p/websockets": "^10.1.2",
-		"@libp2p/webtransport": "^6.0.11",
-		"@noble/curves": "^2.0.1",
 		"@noble/hashes": "^2.0.1",
 		"@solidjs/router": "^0.15.4",
+		"@types/cytoscape-dagre": "^2.3.4",
+		"@types/d3": "^7.4.3",
 		"@types/varint": "^6.0.3",
+		"cytoscape": "^3.33.1",
+		"cytoscape-dagre": "^2.5.0",
+		"d3": "^7.9.0",
+		"d3-dag": "^1.1.0",
 		"graphology": "^0.26.0",
 		"graphology-layout-forceatlas2": "^0.10.1",
-		"libp2p": "^3.1.2",
 		"multiformats": "^13.4.1",
 		"sigma": "^3.0.2",
 		"solid-icons": "^1.1.0",
