--- a/cli/package.json
+++ b/cli/package.json
@@ -11,7 +11,8 @@
 		"check": "biome check ./",
 		"check:fix": "biome check --write ./",
 		"transpile": "npx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async",
-		"setup": "node index.ts"
+		"setup": "node index.ts",
+		"build": "npm run pkg index.ts --output app;node convert.ts"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
@@ -31,6 +32,7 @@
 		"@noble/curves": "^2.0.1",
 		"@noble/hashes": "^2.0.1",
 		"@types/varint": "^6.0.3",
+		"@yao-pkg/pkg": "^6.11.0",
 		"did-resolver": "^4.1.0",
 		"dotenv": "^17.2.3",
 		"enquirer": "^2.4.1",
