--- a/desktop/package.json
+++ b/desktop/package.json
@@ -28,6 +28,23 @@
 		"@tauri-apps/cli": "^2",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3",
-		"vite-plugin-solid": "^2.11.0"
+		"vite-plugin-solid": "^2.11.0",
+		"@atcute/tid": "^1.0.3",
+		"@atproto/crypto": "^0.4.4",
+		"@bytecodealliance/jco": "^1.15.3",
+		"@bytecodealliance/preview2-shim": "^0.17.5",
+		"@ipld/dag-cbor": "^9.2.5",
+		"@noble/hashes": "^2.0.1",
+		"@types/cytoscape-dagre": "^2.3.4",
+		"@types/varint": "^6.0.3",
+		"cytoscape": "^3.33.1",
+		"cytoscape-dagre": "^2.5.0",
+		"graphology": "^0.26.0",
+		"multiformats": "^13.4.1",
+		"sigma": "^3.0.2",
+		"solid-icons": "^1.1.0",
+		"varint": "^6.0.0",
+		"web-did-resolver": "^2.0.31",
+		"zod": "^4.1.13"
 	}
 }
