--- a/desktop/package.json
+++ b/desktop/package.json
@@ -15,17 +15,20 @@
 		"lint:fix": "biome lint --write ./",
 		"check": "biome check ./",
 		"check:fix": "biome check --write ./",
-		"transpile": "bunx jco transpile wasm/repo.wasm -o public --instantiation=async"
+		"transpile": "bunx jco transpile wasm/repo.wasm -o src/public --instantiation=async"
 	},
 	"license": "MIT",
 	"dependencies": {
-		"solid-js": "^1.9.3",
+		"@solidjs/router": "^0.15.4",
 		"@tauri-apps/api": "^2",
-		"@tauri-apps/plugin-opener": "^2"
+		"@tauri-apps/plugin-opener": "^2",
+		"@tauri-apps/plugin-shell": "~2",
+		"@tauri-apps/plugin-store": "~2",
+		"solid-js": "^1.9.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.8",
-		"@tauri-apps/cli": "^2",
+		"@tauri-apps/cli": "^2.9.6",
 		"typescript": "~5.6.2",
 		"vite": "^6.0.3",
 		"vite-plugin-solid": "^2.11.0",
