--- a/cli/package.json
+++ b/cli/package.json
@@ -34,6 +34,7 @@
 		"enquirer": "^2.4.1",
 		"keytar": "^7.9.0",
 		"multiformats": "^13.4.1",
+		"simple-git": "^3.30.0",
 		"varint": "^6.0.0",
 		"web-did-resolver": "^2.0.32",
 		"zod": "^4.1.13"
