--- a/desktop/package.json
+++ b/desktop/package.json
@@ -38,6 +38,7 @@
 		"enquirer": "^2.4.1",
 		"keytar": "^7.9.0",
 		"multiformats": "^13.4.1",
+		"simple-git": "^3.30.0",
 		"tsup": "^8.5.1",
 		"varint": "^6.0.0",
 		"web-did-resolver": "^2.0.32",
