--- a/db/package.json
+++ b/db/package.json
@@ -1,11 +1,16 @@
 {
-	"name": "db",
+	"name": "@polka/db",
 	"module": "index.ts",
 	"type": "module",
 	"scripts": {
 		"transpile": "npx jco transpile wasm/repo.wasm -o dist/transpiled --instantiation=async"
 	},
 	"private": true,
+	"exports": {
+		"./lib": "./lib/db.ts",
+		"./store": "./store/index.ts",
+		"./dist/*": "./dist/*"
+	},
 	"dependencies": {
 		"@atcute/tid": "^1.0.3",
 		"@atproto/crypto": "^0.4.5",
@@ -26,7 +31,6 @@
 		"zod": "^4.1.13"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.3.10",
 		"@types/bun": "latest"
 	},
 	"peerDependencies": {
