--- a/desktop/ui/package.json
+++ b/desktop/ui/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "vite-template-solid",
+	"name": "desktop-ui",
 	"version": "0.0.0",
 	"description": "",
 	"type": "module",
@@ -35,6 +35,7 @@
 		"solid-js": "^1.9.9",
 		"varint": "^6.0.0",
 		"web-did-resolver": "^2.0.31",
-		"zod": "^4.1.13"
+		"zod": "^4.1.13",
+		"@polka/db": "workspace:*"
 	}
 }
