--- a/webview/package.json
+++ b/webview/package.json
@@ -7,8 +7,7 @@
 		"start": "vite",
 		"dev": "vite",
 		"build": "vite build",
-		"serve": "vite preview",
-		"transpile": "npx jco transpile wasm/repo.wasm -o public --instantiation=async"
+		"serve": "vite preview"
 	},
 	"license": "MIT",
 	"devDependencies": {
@@ -38,6 +37,7 @@
 		"solid-js": "^1.9.9",
 		"varint": "^6.0.0",
 		"web-did-resolver": "^2.0.31",
-		"zod": "^4.1.13"
+		"zod": "^4.1.13",
+		"@polka/db": "workspace:*"
 	}
 }
