--- a/db/package.json
+++ b/db/package.json
@@ -7,16 +7,20 @@
 	},
 	"private": true,
 	"exports": {
-		"./lib": "./lib/index.ts",
-		"./lib/db": "./lib/db.ts",
-		"./lib/reader": "./lib/reader.ts",
-		"./lib/http-store": "./lib/httpStore.ts",
-		"./lib/types": "./lib/types.ts"
+		".": "./lib/db.ts",
+		"./reader": "./lib/reader.ts",
+		"./types": "./lib/types.ts"
 	},
 	"dependencies": {
+		"@atcute/cbor": "^2.2.8",
+		"@atcute/mst": "^0.1.1",
+		"@atcute/repo": "^0.1.1",
 		"@atcute/tid": "^1.0.3",
 		"@atproto/crypto": "^0.4.5",
+		"@atproto/lex-cbor": "^0.0.3",
+		"@atproto/lex-data": "^0.0.3",
 		"@atproto/repo": "^0.8.12",
+		"@ipld/dag-cbor": "^9.2.5",
 		"@types/node": "^25.0.3",
 		"multiformats": "^13.4.1"
 	},
