--- a/desktop/package.json
+++ b/desktop/package.json
@@ -23,13 +23,15 @@
 		"@noble/curves": "^2.0.1",
 		"@noble/hashes": "^2.0.1",
 		"@polka/db": "workspace:*",
+		"@types/bloomfilter": "^0.0.2",
 		"@types/markdown-it": "^14.1.2",
+		"bloomfilter": "^1.0.0",
 		"did-resolver": "^4.1.0",
 		"dotenv": "^17.2.3",
 		"electron": "^39.2.7",
 		"electron-store": "^11.0.2",
 		"keytar": "^7.9.0",
-		"multiformats": "^13.4.1",
+		"multiformats": "^13.4.2",
 		"nostr-tools": "^2.19.4",
 		"simple-git": "^3.30.0",
 		"tsup": "^8.5.1",
