--- a/cli/package.json
+++ b/cli/package.json
@@ -19,10 +19,10 @@
 		"@ipld/dag-cbor": "^9.2.5",
 		"@noble/curves": "^2.0.1",
 		"@polka/db": "workspace:*",
+		"age-encryption": "^0.3.0",
 		"did-resolver": "^4.1.0",
 		"dotenv": "^17.2.3",
 		"enquirer": "^2.4.1",
-		"keytar": "^7.9.0",
 		"multiformats": "^13.4.1",
 		"simple-git": "^3.30.0",
 		"web-did-resolver": "^2.0.32",
